--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ stages:
   - job: Build
     displayName: 'Build'
     pool:
+      name: 'Azure Pipelines'
       vmImage: 'ubuntu-latest'
     steps:
     - task: Docker@2
