--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: python-webapp
-        image: peckma/pythonmoment:latest
+        image: peckma/hello-virtualization:latest
         ports:
         - containerPort: 8080
