Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,4 +25,4 @@ stages:
         repository: '$(containerRegistry)/$(imageName)'
         dockerfile: '**/Dockerfile'
         context: '.'
-        containerRegistry: 'yourDockerRegistryServiceConnection'
+        containerRegistry: 'DockerHub'
