Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ stages:
   - job: Build
     displayName: 'Build'
     pool:
-      name: 'Azure Pipeline'
+      name: 'Default'
       vmImage: 'ubuntu-latest'
     steps:
     - task: Docker@2
