--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: nginx
-  replicas: 3
+  replicas: 1
   template:
     metadata:
       labels:
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: dockerreg/nginx
+        image: dockerreg/nginx:latest
         ports:
         - containerPort: 80
