--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: nginx
     spec:
       containers:
-      - name: nginx
+      - name: nginxmiami
         image: dockerreg/nginx:latest
         ports:
         - containerPort: 80
