--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: nginxmiami
-        image: dockerreg/nginx:latest
+        image: nginx:latest
         ports:
         - containerPort: 80
