--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: peckpython
 spec:
   selector:
     matchLabels:
-      app: nginx
-  replicas: 3
+      app: myapp
+  replicas: 1
   template:
     metadata:
       labels:
-        app: nginx
+        app: myapp
     spec:
       containers:
       - name: nginxmiami
-        image: nginx:latest
+        image: peckma/pythonmoment
         ports:
-        - containerPort: 80
+        - containerPort: 8080
