--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ stages:
   - job: Build
     displayName: 'Build'
     pool:
-      name: 'Default'
+      name: 'Azure Pipeline'
       vmImage: 'ubuntu-latest'
     steps:
     - task: Docker@2
